--- a/app/views/groups/signup/confirmation.html.haml
+++ b/app/views/groups/signup/confirmation.html.haml
@@ -2,8 +2,8 @@
   .container.body { padding: 0; background-color: transparent;   }
   .errors { color: red; font-size: 17px; }
 
-#order_confirmation.employer-container{ style: "width: 760px; background: rgba(36, 72, 109, 0.8); border-radius: 0; margin-top:42px;" }
-  .employer-box{ style: "border-radius: 0; padding: 20px;" }
+#order_confirmation.employer-container{ style: "width: 760px; background: rgba(36, 72, 109, 0.8); margin-top:42px;" }
+  .employer-box{ style: "padding: 20px;" }
     .header
       %img{ src: GIANT_STONEY, alt: "Stoney"}
       .text{ style: ""}
