--- a/app/views/evaluations/_form.html.haml
+++ b/app/views/evaluations/_form.html.haml
@@ -54,9 +54,9 @@
             .challenge_chooser
               %h5 Your Custom Challenges
               .challenges
-                - if @group_paths.any?
+                - if @group_path_collection.any?
                   %ul.checklist.custom-challenges
-                    - @group_paths.sort_by{|path| [path.name.upcase]}.each do |gp|
+                    - @group_path_collection.sort_by{|path| [path.name.upcase]}.each do |gp|
                       %li
                         %label
                           = check_box_tag "evaluation[selected_paths][#{gp.id}]", 1, @evaluation_path_ids.include?(gp.id)
