newsfeed fix and eval sales pages updated

--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -223,7 +223,7 @@ $landing_green: #73bb6e;
   }
 }
 #happy_users {
-  background-color: $landing_green;
+  background: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/green_texture_big4.png");
   .holder {
     margin:10px auto; 
     padding: 10px 0; 
