--- a/app/views/pages/pricing.html.haml
+++ b/app/views/pages/pricing.html.haml
@@ -26,6 +26,7 @@
                     %li #{Group::TRIAL_CANDIDATE_LIMIT} Candidates
                     %li Unlimited Challenges 
                     %li{ style: "padding: 25px 15px;" } Limited Email Support
+                    %li OFCCP Compliant
                   .price_footer 
                     = link_to "Start Free Trial", trial_groups_path, class: "action_button" 
                 %li.price_block
@@ -39,6 +40,7 @@
                     %li Unlimited Candidates 
                     %li Unlimited Challenges 
                     %li{ style: "padding: 25px 15px;" } Prioritized Email Support
+                    %li OFCCP Compliant
                   .price_footer 
                     = link_to "Start Free Trial", new_group_path(p: Group::SINGLE_PLAN), class: "action_button" 
                 %li.price_block.popular
@@ -54,6 +56,7 @@
                     %li Unlimited Candidates 
                     %li Unlimited Challenges 
                     %li Premium Phone and Email Support
+                    %li OFCCP Compliant
                   .price_footer
                     = link_to "Start Free Trial", new_group_path(p: Group::TWO_TO_FIVE_PLAN), class: "action_button" 
                 %li.price_block 
@@ -67,6 +70,7 @@
                     %li Unlimited Candidates 
                     %li Unlimited Challenges  
                     %li Premium Phone and Email Support
+                    %li OFCCP Compliant
                   .price_footer
                     = link_to "Start Free Trial", new_group_path(p: Group::SIX_TO_FIFTEEN_PLAN), class: "action_button", descriptor: "six_to_fifteen" 
               %div.sales_help_inline{ style: "margin-top: -30px; "} 
@@ -109,7 +113,7 @@
                     How are my candidates evaluated? 
                 #collapseOne.accordion-body.collapse
                   .accordion-inner 
-                    We evaluate your candidates with things called <strong>Challenges</strong> -- fancy quizzes that analyze people's raw knowledge, their creative ability, and what they’ve accomplished. 
+                    We evaluate your candidates with assessments called <strong>Challenges</strong> -- fancy quizzes that analyze people's raw knowledge, their creative ability, and what they’ve accomplished. 
                     We distill all this information down into one easy to understand score that indicates how capable your candidates actually are. 
               .accordion-group 
                 .accordion-heading 
