--- a/app/views/pages/promo_pricing.html.haml
+++ b/app/views/pages/promo_pricing.html.haml
@@ -126,7 +126,7 @@
                       How are my candidates evaluated? 
                   #collapseOne.accordion-body.collapse
                     .accordion-inner 
-                      We evaluate your candidates with things called <strong>Challenges</strong> -- fancy quizzes that analyze people's raw knowledge, their creative ability, and what they’ve accomplished. 
+                      We evaluate your candidates with assessments called <strong>Challenges</strong> -- fancy quizzes that analyze people's raw knowledge, their creative ability, and what they’ve accomplished. 
                       We distill all this information down into one easy to understand score that indicates how capable your candidates actually are. 
                 .accordion-group 
                   .accordion-heading 
