--- a/app/views/pages/airs_landing.html.haml
+++ b/app/views/pages/airs_landing.html.haml
@@ -55,7 +55,7 @@
           %h2{ style: "margin-bottom: 0;"} 
             The MetaBright Evaluator
           %p.be_bold
-            Never waste your time in an interview again. The MetaBright Evaluator is a skills assessment platform that measures and verfies the skills of your job candidates <span style="font-family: 'MuliItalic';">before</span> you interview them. Just direct your candidates to your unique MetaBright URL, and we take care of the rest.
+            Never waste your time in an interview again. The MetaBright Evaluator is an OFCCP compliant skills assessment platform that measures and verfies the skills of your job candidates <span style="font-family: 'MuliItalic';">before</span> you interview them. Just direct your candidates to your unique MetaBright URL, and we take care of the rest.
     %article#art_3
       .sexy_time 
         .make_room_sides
@@ -179,7 +179,7 @@
                   How are my candidates evaluated? 
               #collapseOne.accordion-body.collapse.in
                 .accordion-inner 
-                  We evaluate your candidates with things called <strong>Challenges</strong> -- fancy quizzes that analyze people's raw knowledge, their creative ability, and what they’ve accomplished. 
+                  We evaluate your candidates with assessments called <strong>Challenges</strong> -- fancy quizzes that analyze people's raw knowledge, their creative ability, and what they’ve accomplished. 
                   We distill all this information down into one easy to understand score that indicates how capable your candidates actually are. 
             .accordion-group 
               .accordion-heading 
