--- a/app/views/groups/challenges.html.haml
+++ b/app/views/groups/challenges.html.haml
@@ -46,7 +46,7 @@
             .text_box{ style: "font-size: 16px; width: 100%; margin: 0px; line-height: 20px;" }
               = image_tag LIGHT_BULB_URL
               %p{ style: "width: 90%; display: inline-block;"}
-                Use MetaBright Challenges to test your candidates on popular topics. All MetaBright Challenges are professionally developed and designed to parse out your candidates' true ability. Select a Challenge to create an Evaluation that includes that Challenge. 
+                Customize a MetaBright Challenge to fit the needs of your organization. When you select a MetaBright Challenge from the list below, a copy of the Challenge will be created just for your company. You'll then have the opportunity to edit the content of the Challenge.
         .mb_challenge_collection
           = render "mb_challenges"
         
