--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1055,7 +1055,7 @@ th {
 }
 
 /* Sign in and Register and Search Edu Modals */
-#login_modal, #register_modal, #search_learn_more_modal {
+#login_modal, #register_modal, #search_learn_more_modal, #clone_challenge_modal {
   background-color: transparent; 
   border: none; 
   box-shadow: none;
