--- a/app/views/paths/_table.html.haml
+++ b/app/views/paths/_table.html.haml
@@ -4,6 +4,6 @@
   });
 
 %ul.inlinedisplay
-  - @paths.to_a.each do |path|
+  - @paths.each do |path|
     = render "shared/mosaic", { pic: path.path_pic, link: edit_group_path_path(path.group_id, path.permalink), title: path.name, subtitle: "#{path.enrollments.size} users" }
 = link_to "+ Create a new Challenge", new_group_path_url, class: "create_link"
