--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -88,30 +88,51 @@
             %section.gradient_down 
               .holder.gradient_up
                 .text{ style: "width: 46%; "} 
+                  %h1{ style: "width: 95%; margin: 0 auto 12px;"} 
+                    Customizable for a tailored fit.
+                  %p 
+                    We know your brand is important, so MetaBright makes customization easy. Control everything from the branding and color scheme of your account, to the precise content your candidates are tested on.
+                .image.right{ style: "box-shadow: none; margin-top:15px; height: 100%;"}
+                  .image.right{ style: "width: 100%; "} 
+                    %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/export_example4.png"}
+                  .clear_floats
+                  .feature_testimonial{ style: "margin-top: 4px; "}
+                    %div{ style: "display: inline-block;"}
+                      = image_tag "https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRdHZrqLSXeTTmCx6ixga5Px23Trw0V-BgT91xekGH7C4gU4ZAo", class: "img-circle", style: "width:98px;"
+                    %div{ style: "width: 69%; position: relative; top 20px; margin-left: 12px; display: inline-block; top: 28px;"} 
+                      .testimonial{ style: "font-family: MuliItalic; font-size: 16px;"}
+                        "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut."
+                      .info
+                        %span - First Last, CEO of Acme Co.
+            %section
+              .holder
+                .image{ style: "margin-top:15px; "} 
+                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/CR.png"}
+                .text.right{ style: "width: 46%; "} 
                   %h1 
                     Robust and dynamic testing. 
                   %p 
                     Take advantage of MetaBright's industry-leading testing. We assess your candidates across more dimensions than anyone else. And our question formats uncover your candidates' real-world knowledge. 
-                .image.right{ style: "margin-top:15px; "} 
-                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/CR.png"} 
-            %section
-              .holder
-                .image{ style: "width: 52%; margin-top: 13px;"} 
-                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/eval_overview_big_zoom8.png"} 
-                .text.right{ style: "width: 40%;"} 
+                
+            %section.gradient_down
+              .holder.gradient_up
+                .text{ style: "width: 40%;"} 
                   %h1 
                     Compare your candidates at a glance. 
                   %p 
                     The Evaluator concisely organizes all of your candidates in a single view. Even better, you can sort and compare your candidates based on their aptitude. Try doing that with resumes. 
-            %section.gradient_down 
+                .image.right{ style: "width: 52%; margin-top: 13px;"} 
+                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/eval_overview_big_zoom8.png"}
+            %section 
               .holder
-                .text{ style: "width: 38%;"} 
+                .image{ style: "width: 55%; margin-top:11px;" } 
+                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/grade5.png"}
+                .text.right{ style: "width: 38%;"} 
                   %h1 
                     Make a confident choice. 
                   %p 
                     Know for certain when a candidate is deserving of an interview. Examine their performance, drill down into responses, and see how they stack-up against their peers.  
-                .image.right{ style: "width: 55%; margin-top:11px;" } 
-                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/grade5.png"} 
+                
           .click-it.jagged_top.jagged_bottom{ style: "margin: 10px 0 65px;"}
             .holder
               %p 
