--- a/app/views/pages/pricing.html.haml
+++ b/app/views/pages/pricing.html.haml
@@ -24,7 +24,8 @@
                   %ul.features 
                     %li 3 Evaluations
                     %li #{Group::TRIAL_CANDIDATE_LIMIT} Candidates
-                    %li Unlimited Challenges 
+                    %li Unlimited Challenges
+                    %li --
                     %li{ style: "padding: 25px 15px;" } Limited Email Support
                     %li OFCCP Compliant
                   .price_footer 
@@ -39,6 +40,7 @@
                     %li Unlimited Evaluations
                     %li Unlimited Candidates 
                     %li Unlimited Challenges 
+                    %li Custom CSS Editor
                     %li{ style: "padding: 25px 15px;" } Prioritized Email Support
                     %li OFCCP Compliant
                   .price_footer 
@@ -55,6 +57,7 @@
                     %li Unlimited Evaluations
                     %li Unlimited Candidates 
                     %li Unlimited Challenges 
+                    %li Custom CSS Editor
                     %li Premium Phone and Email Support
                     %li OFCCP Compliant
                   .price_footer
@@ -69,6 +72,7 @@
                     %li Unlimited Evaluations
                     %li Unlimited Candidates 
                     %li Unlimited Challenges  
+                    %li Custom CSS Editor
                     %li Premium Phone and Email Support
                     %li OFCCP Compliant
                   .price_footer
